# atomicDEX-API

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.docker/: Dockerfile  Dockerfile.ci-container  Dockerfile.dev-release  Dockerfile.release  Dockerfile.ubuntu.ci
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/deps-install/: action.yml
.github/workflows/: dev-build.yml  fmt-and-lint.yml  release-build.yml  test.yml  validate-mm2-version.yml
docs/: ANDROID_CROSS_ON_M1_MAC.md  DEV_ENVIRONMENT.md  WASM_BUILD.md
mm2src/: database.rs  docker_tests.rs  lp_dispatcher.rs  lp_native_dex.rs  lp_network.rs  lp_swap.rs  mm2.rs  mm2_tests.rs  ordermatch_tests.rs  rpc.rs
mm2src/adex_cli/: Cargo.toml
mm2src/adex_cli/src/: rpc_data.rs
mm2src/coins/: Cargo.toml  coin_balance.rs  coin_errors.rs  eth.rs  hd_pubkey.rs  hd_wallet.rs  init_create_account.rs  lightning.rs  lp_coins.rs  lp_price.rs  my_tx_history_v2.rs  nft.rs  qrc20.rs  sia.rs  siacoin.rs  solana.rs  test_coin.rs  utxo.rs  z_coin.rs  z_transactions.rs  z_transactions_draft.rs
mm2src/coins/eth/: eip1559_gas_fee.rs  eth_hd_wallet.rs  eth_swap_v2.rs  eth_tests.rs  eth_wasm_tests.rs  eth_withdraw.rs  for_tests.rs  maker_swap_v2_abi.json  taker_swap_v2_abi.json  v2_activation.rs
mm2src/coins/hd_wallet/: coin_ops.rs  errors.rs  mod.rs  pubkey.rs  withdraw_ops.rs
mm2src/coins/hd_wallet_storage/: mod.rs
mm2src/coins/lightning/: ln_conf.rs  ln_platform.rs  ln_sql.rs  ln_utils.rs
mm2src/coins/nft/: nft_errors.rs  nft_structs.rs  nft_tests.rs
mm2src/coins/qrc20/: history.rs  qrc20_tests.rs  swap.rs
mm2src/coins/rpc_command/: account_balance.rs  get_estimated_fees.rs  hd_account_balance_rpc_error.rs  init_create_account.rs  init_scan_for_new_addresses.rs  mod.rs
mm2src/coins/siacoin/: sia_hd_wallet.rs
mm2src/coins/solana/: solana_common.rs  solana_common_tests.rs  solana_decode_tx_helpers.rs  solana_tests.rs  spl.rs  spl_tests.rs
mm2src/coins/tendermint/: mod.rs  tendermint_coin.rs  (+3 more)
mm2src/common/: Cargo.toml  common.rs  crash_reports.rs  custom_iter.rs  expirable_map.rs  jsonrpc_client.rs
mm2src/crypto/: Cargo.toml
mm2src/database/: my_orders.rs
mm2src/docker_tests/: qrc20_tests.rs  solana_tests.rs  swaps_confs_settings_sync_tests.rs
mm2src/lp_init/: init_context.rs  init_hw.rs
mm2src/lp_network/: Cargo.toml
mm2src/lp_ordermatch/: Cargo.toml  best_orders.rs  lp_bot.rs  lp_ordermatch.rs  my_orders_storage.rs  new_protocol.rs  orderbook_rpc.rs  ordermatch_wasm_db.rs  simple_market_maker.rs
mm2src/lp_swap/: maker_swap.rs  saved_swap.rs  taker_swap.rs  trade_preimage.rs
mm2src/mm2_bin_lib/: Cargo.toml
mm2src/mm2_bitcoin/crypto/: Cargo.toml
mm2src/mm2_bitcoin/crypto/src/: lib.rs
mm2src/mm2_core/: Cargo.toml
mm2src/mm2_core/src/: data_asker.rs  event_dispatcher.rs  lib.rs  mm_ctx.rs
mm2src/mm2_eth/: Cargo.toml
mm2src/mm2_libp2p/: Cargo.toml
mm2src/mm2_main/: Cargo.toml
mm2src/mm2_metamask/: Cargo.toml
mm2src/mm2_net/: Cargo.toml
mm2src/mm2_p2p/: Cargo.toml
mm2src/mm2_tests/: bch_and_slp_tests.rs  lightning_tests.rs  lp_bot_tests.rs
mm2src/proxy_signature/: Cargo.toml
mm2src/proxy_signature/src/: lib.rs
mm2src/rpc/: lp_commands.rs  signature.rs
mm2src/trezor/: Cargo.toml
scripts/ci/: upload_artifact.py
(+244 files in other folders)
